--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "react": "^18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
@@ -7,10 +8,18 @@
   "version": "1.0.0",
   "main": "index.ts",
   "devDependencies": {
-    "husky": "^8.0.3"
+    "@types/react": "^18.2.38",
+    "babel-loader": "^9.1.3",
+    "html-webpack-plugin": "^5.5.3",
+    "husky": "^8.0.3",
+    "ts-loader": "^9.5.1",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack serve --open --mode development"
   },
   "author": "",
   "license": "ISC",
