--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
-  "name": "mini-react",
-  "version": "1.0.0",
-  "main": "index.ts",
+  "name": "@gamejoye/minreact",
+  "version": "1.0.1",
+  "main": "dist/bundle.cjs.js",
+  "module": "dist/bundle.esm.js",
+  "browser": "dist/bundle.umd.js",
+  "private": false,
   "devDependencies": {
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.2.38",
     "babel-loader": "^9.1.3",
+    "barrelsby": "^2.8.1",
     "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.3",
+    "rollup": "^4.12.0",
     "ts-loader": "^9.5.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
@@ -19,7 +28,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack serve --open --mode development"
+    "dev": "webpack serve --open --mode development",
+    "build": "rollup -c",
+    "generate-barrels": "barrelsby"
   },
   "author": "",
   "license": "ISC",
