--- a/package.json
+++ b/package.json
@@ -15,24 +15,30 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.38",
     "babel-loader": "^9.1.3",
     "barrelsby": "^2.8.1",
     "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "rollup": "^4.12.0",
+    "ts-jest": "^29.1.4",
     "ts-loader": "^9.5.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config ./jest.config.js",
+    "test:watch": "jest --config ./jest.config.js --watch",
+    "test:cov": "jest --config ./jest.config.js --coverage",
     "dev": "webpack serve --open --mode development",
     "build": "rollup -c",
     "generate-barrels": "barrelsby"
   },
   "author": "",
-  "license": "ISC",
+  "license": "UNLICENSED",
   "description": ""
 }
