build(license): MIT LICENSE

--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "generate-barrels": "barrelsby"
   },
   "author": "",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "description": ""
 }
