--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@mini-react/*": [
+      "@minreact/*": [
         "packages/*"
       ],
       "@tests/*": [
